@@ -2,6 +2,7 @@
 Changes for 2.0.0rc3
 
 New features:
+..F....... [ZBXNEXT-1153] support for nested templates in import (Vedmak)
 ..F....... [ZBX-1357] updated French, German, Greek, Japanese, Polish, Russian and Turkish translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
